# worker-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  aider_runner.py  approvals.py  bot.py  budget.py  config.py  crons.py  db.py  locks.py  main.py  pyproject.toml  run.ps1  sessions.db.bak-20260420-181449  suggestions.py  test_runner.py
.claude/: settings.local.json
tests/: conftest.py  test_aider_runner.py  test_approvals.py  test_budget.py  test_config.py  test_crons.py  test_db.py  test_news.py  test_scheduler_dispatch.py  test_suggestions.py  test_test_runner.py
workerbot/: app.py  config.py
workerbot/core/: budget.py  memory.py  prompts.py  scheduler.py
workerbot/handlers/: approvals.py  base.py  cron.py  git.py  ops.py  session.py  tasks.py
workerbot/runners/: aider.py  git.py  llm.py  news.py  test_runner.py
workerbot/storage/: approvals.py  chat_state.py  crons.py  db.py  suggestions.py  usage.py
